Enable TLS reloading.